a logomarca com link para home : foi adicionada à navbar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <!-- Navegação -->
-    <nav class="navbar"></nav>
+    <nav class="navbar navbar-expanded-lg bg-info">
+        
+        <!-- Logomarca com link para Home -->
+        <div class="container">
+            <a class="navbar-brand" href=" https://bnuonline.com.br/inicio ">
+                <img src="img/logobnuonline.png" alt="logomarca" width="22%">
+            </a>
+        </div>
+
+
+        <!-- Fim do Navbar -->
+    </nav>
 
     <!-- Início do Container -->
     <div class="container"></div>
