um segundo css foi criado para estilizar a classe nav-link ; § o menu de links foi adiciona à navbar do topo ; § ainda falta criar o background do hover sobre o link

--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/app/style.css">
     <title>Blumenau Online | Um Portal de Oportunidades</title>
 </head>
 <body>
     <!-- Navegação -->
-    <nav class="navbar navbar-expanded-lg bg-info">
+    <nav class="navbar navbar-expanded-lg bg-success" >
         
         <!-- Logomarca com link para Home -->
-        <div class="container">
-            <a class="navbar-brand" href=" https://bnuonline.com.br/inicio ">
-                <img src="img/logobnuonline.png" alt="logomarca" width="22%">
-            </a>
+        <a class="navbar-brand col-sm-4" href=" https://bnuonline.com.br/inicio">
+            <img src="img/logobnuonline.png" class="float-end" alt="logomarca" width="333vw">
+        </a>
+ 
+
+        <!-- Menu de links das seções -->
+        <div class="nav col">
+            <a class="nav-link link-light" href=" https://bnuonline.com.br/inicio ">home</a>
+            <a class="nav-link link-light" href=" https://bnuonline.com.br/vagas ">empregos</a>
+            <a class="nav-link link-light" href=" https://bnuonline.com.br/curriculos ">currículos</a>
+            <a class="nav-link link-light" href=" https://bnuonline.com.br/classificados ">classificados</a>
+            <a class="nav-link link-light" href=" https://bnuonline.com.br/variedades ">blog</a>
         </div>
-
-
         <!-- Fim do Navbar -->
     </nav>
 
