iniciando a elaboração do banner das seçoes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  
 
         <!-- Menu de links das seções -->
-        <div class="nav col">
+        <div class="nav col uppercase">
             <a class="nav-link link-light" href=" https://bnuonline.com.br/inicio ">home</a>
             <a class="nav-link link-light" href=" https://bnuonline.com.br/vagas ">empregos</a>
             <a class="nav-link link-light" href=" https://bnuonline.com.br/curriculos ">currículos</a>
@@ -29,7 +29,39 @@
     </nav>
 
     <!-- Início do Container -->
-    <div class="container"></div>
+    <div class="container">
+
+        <!-- Banner -->
+            <!-- Banner direita -->
+                <div class="row">
+                    <div class="card uppercase" style="width: 18rem;">
+                        <div class="card-body">
+                            <a href="https://bnuonline.com.br/vagas" class="bannergde">
+                                <h2><span class="card-title">101</span></h2>
+                                <span class=" card-text lowercase">vagas de empregos</span>
+                            </a>
+
+                            <ul class="bannergde">
+                                <li>
+                                    <a href=" https://bnuonline.com.br/vagas " class="btn btn-primary">ver vagas</a>
+                                </li>
+                                <li>
+                                    <a href=" https://bnuonline.com.br/vagas " class="btn btn-primary">cadastrar vaga destaque</a>
+                                </li>
+                                <li>
+                                    <a href=" https://bnuonline.com.br/vagas " class="btn btn-primary">cadastrar vaga grátis</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                <!-- Banner central -->
+            <div class="col sm-12 md-4 bg-indigo uppercase">
+                infotal
+            </div>
+            <div class="col sm-12 md-4 bg-indigo uppercase">infotal</div>
+        </div>
+        <!-- Fim do Banner -->
+    </div>
     <!-- Término do Container -->
 
     <!-- Rodapé -->
