o banner da direia/vagas foi elaborado; § falta os outros banners

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Navegação -->
-    <nav class="navbar navbar-expanded-lg bg-success" >
+    <nav class="navbar navbar-expanded-lg bg-success">
         
         <!-- Logomarca com link para Home -->
         <a class="navbar-brand col-sm-4" href=" https://bnuonline.com.br/inicio">
@@ -34,32 +34,29 @@
         <!-- Banner -->
             <!-- Banner direita -->
                 <div class="row">
-                    <div class="card uppercase" style="width: 18rem;">
+                    <div class="card banner" style="width: 18rem; padding: 0; margin: 0 auto; margin-top: 15vh;">
                         <div class="card-body">
-                            <a href="https://bnuonline.com.br/vagas" class="bannergde">
-                                <h2><span class="card-title">101</span></h2>
-                                <span class=" card-text lowercase">vagas de empregos</span>
-                            </a>
-
-                            <ul class="bannergde">
-                                <li>
-                                    <a href=" https://bnuonline.com.br/vagas " class="btn btn-primary">ver vagas</a>
-                                </li>
-                                <li>
-                                    <a href=" https://bnuonline.com.br/vagas " class="btn btn-primary">cadastrar vaga destaque</a>
-                                </li>
-                                <li>
-                                    <a href=" https://bnuonline.com.br/vagas " class="btn btn-primary">cadastrar vaga grátis</a>
-                                </li>
-                            </ul>
-                        </div>
+                            <div class="btn-group-vertical grid" style="row-gap: 0.75rem;" role="group" aria-label="Vertical button group">
+                                <button type="button" class="btn azul">
+                                    <a href="https://bnuonline.com.br/vagas">
+                                        <h2><span class="card-title">101</span></h2>
+                                        <h6 class="card-subtitle lowercase">vagas de empregos</h6>
+                                    </a>
+                                </button>
+                                <button type="button" class="btn uppercase azul">
+                                    <a href="https://bnuonline.com.br/vagas">ver vagas</a>
+                                </button>
+                                <button type="button" class="btn uppercase amarelo">
+                                    <a href="https://bnuonline.com.br/cadastra_vaga_destaque">cadastrar vaga</a>
+                                </button>
+                                <button type="button" class="btn uppercase verde">
+                                    <a href="https://bnuonline.com.br/cadastra_vaga_gratuito">cadastrar vaga grátis</a>
+                                </button>
+                            </div>
+                        </div>                    
                     </div>
-                <!-- Banner central -->
-            <div class="col sm-12 md-4 bg-indigo uppercase">
-                infotal
-            </div>
-            <div class="col sm-12 md-4 bg-indigo uppercase">infotal</div>
-        </div>
+                <!-- Fim do Banner direita -->
+                </div>
         <!-- Fim do Banner -->
     </div>
     <!-- Término do Container -->
