o banner de links da seções foi elaborado

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  
 
         <!-- Menu de links das seções -->
-        <div class="nav col uppercase">
+        <div class="nav col maiuscula">
             <a class="nav-link link-light" href=" https://bnuonline.com.br/inicio ">home</a>
             <a class="nav-link link-light" href=" https://bnuonline.com.br/vagas ">empregos</a>
             <a class="nav-link link-light" href=" https://bnuonline.com.br/curriculos ">currículos</a>
@@ -31,33 +31,94 @@
     <!-- Início do Container -->
     <div class="container">
 
-        <!-- Banner -->
-            <!-- Banner direita -->
+                <!-- Banner -->            
                 <div class="row">
-                    <div class="card banner" style="width: 18rem; padding: 0; margin: 0 auto; margin-top: 15vh;">
+                    <!-- Banner direita -->
+                    <div class="card banner">
                         <div class="card-body">
-                            <div class="btn-group-vertical grid" style="row-gap: 0.75rem;" role="group" aria-label="Vertical button group">
+
+                            <div class="btn-group-vertical grid" role="group" aria-label="Vertical button group">
                                 <button type="button" class="btn azul">
                                     <a href="https://bnuonline.com.br/vagas">
                                         <h2><span class="card-title">101</span></h2>
-                                        <h6 class="card-subtitle lowercase">vagas de empregos</h6>
+                                        <h6 class="card-subtitle minuscula">vagas de empregos</h6>
                                     </a>
                                 </button>
-                                <button type="button" class="btn uppercase azul">
+
+                                <button type="button" class="btn maiuscula azul">
                                     <a href="https://bnuonline.com.br/vagas">ver vagas</a>
                                 </button>
-                                <button type="button" class="btn uppercase amarelo">
+
+                                <button type="button" class="btn maiuscula amarelo">
                                     <a href="https://bnuonline.com.br/cadastra_vaga_destaque">cadastrar vaga</a>
                                 </button>
-                                <button type="button" class="btn uppercase verde">
+
+                                <button type="button" class="btn maiuscula verde">
                                     <a href="https://bnuonline.com.br/cadastra_vaga_gratuito">cadastrar vaga grátis</a>
                                 </button>
                             </div>
                         </div>                    
                     </div>
-                <!-- Fim do Banner direita -->
-                </div>
-        <!-- Fim do Banner -->
+                    <!-- Fim do Banner direita -->
+
+                    <!-- Banner central -->
+                    <div class="card banner">
+                        <div class="card-body">
+                            <div class="btn-group-vertical grid" role="group" aria-label="Vertical button group">
+
+                                <button type="button" class="btn vermelho">
+                                    <a href="  ########  ">
+                                        <h2><span class="card-title">11</span></h2>
+                                        <h6 class="card-subtitle minuscula">currículos</h6>
+                                    </a>
+                                </button>
+
+                                <button type="button" class="btn maiuscula vermelho">
+                                    <a href=" ######## ">ver currículos</a>
+                                </button>
+
+                                <button type="button" class="btn maiuscula amarelo">
+                                    <a href=" ######## ">cadastrar currículo</a>
+                                </button>
+
+                                <button type="button" class="btn maiuscula verde">
+                                    <a href=" ######## ">cadastrar currículo grátis</a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fim do Banner central -->
+                    
+                    <!-- Banner esquerda -->
+                    <div class="card banner">
+                        <div class="card-body">
+                            <div class="btn-group-vertical grid" role="group" aria-label="Vertical button group">
+
+                                <button type="button" class="btn verdao">
+                                    <a href="  ########  ">
+                                        <h2><span class="card-title">1</span></h2>
+                                        <h6 class="card-subtitle minuscula">classificados</h6>
+                                    </a>
+                                </button>
+
+                                <button type="button" class="btn maiuscula verdao">
+                                    <a href=" ######## ">ver classificados</a>
+                                </button>
+
+                                <button type="button" class="btn maiuscula amarelo">
+                                    <a href=" ######## ">cadastrar classificado</a>
+                                </button>
+
+                                <button type="button" class="btn maiuscula verde">
+                                    <a href=" ######## ">cadastrar classificado grátis</a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fim do Banner esquerda -->
+
+                </div>                
+                <!-- Fim do Banner -->
     </div>
     <!-- Término do Container -->
 
