--- a/index.html
+++ b/index.html
@@ -116,9 +116,72 @@
                         </div>
                     </div>
                     <!-- Fim do Banner esquerda -->
-
                 </div>                
                 <!-- Fim do Banner -->
+
+        <!-- Conteúdo Principal: Destaques da Primeira Página -->
+        <main class="row">
+
+            <!-- NOTÍCIAS / DESTAQUES -->
+            <div class="card banner"> 
+                <div class="card-head">
+                    <h5 class="card-title noticias">notícias</h5>
+                </div>               
+                <div class="card-body">
+                    <img src="https://bnuonline.com.br/crop/220x150/1.46x1/upload/variedades/1696530626/blumenau_enchente.jpg" class="card-img-top" alt="Seção de Notícias">
+                    <p class="card-text">Enchente em Blumenau: Rio Itajaí-Açu deve atingir 9,5 metros, diz AlertaBlu.</p>
+                </div>
+                <div class="card-footer">
+                    <a href=" ###### " class="btn btn-light">ler</a>
+                </div>
+            </div>
+            <!-- FIM de Notícias / Destaques -->
+                
+            <!-- EVENTOS / DESTAQUES -->
+            <div class="card banner">
+                    <div class="card-head">
+                        <h5 class="card-title eventos">eventos</h5>
+                    </div>               
+                    <div class="card-body">
+                        <img src="https://bnuonline.com.br/crop/220x150/1.46x1/upload/variedades/1696256999/download_5.png" class="card-img-top" alt="Seção de Eventos">
+                        <p class="card-text">4ª Temporada de Exposições do MAB ‒ Ano 2023.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href=" ###### " class="btn btn-light">ler</a>
+                    </div>
+            </div>
+            <!-- FIM de Eventos / Destaques -->
+
+            <!-- DIVERSOS / DESTAQUES -->
+            <div class="card banner">
+                <div class="card-head">
+                    <h5 class="card-title diversos">diversos</h5>
+                </div>               
+                <div class="card-body">
+                    <img src="https://bnuonline.com.br/crop/220x150/1.46x1/upload/variedades/1696261619/1f6f06bc6e30df75880e81286e945b53.jpeg" class="card-img-top" alt="Seção de Diversos">
+                    <p class="card-text">Praça do Empreendedor implementa atendimento automatizado on-line.</p>
+                </div>
+                <div class="card-footer">
+                    <a href=" ###### " class="btn btn-light">ler</a>
+                </div>
+            </div>
+            <!-- FIM de Diversos / Destaques -->
+
+            <!-- OKTOBERFEST / DESTAQUES -->
+            <div class="card banner">
+                <div class="card-head">
+                    <h5 class="card-title oktoberfest">oktoberfest</h5>
+                </div>               
+                <div class="card-body">
+                    <img src="https://bnuonline.com.br/crop/220x150/1.46x1/upload/variedades/1696548591/27_46_primeira_noite_de_oktoberfest_e_maior_dos_ultimos_10_anos_confira_os_numeros_whatsapp_image_2019_10_10_at_09.jpeg" class="card-img-top" alt="Seção de Oktoberfest">
+                    <p class="card-text">URGENTE ‒ Após fortes chuvas, a 38ª Oktoberfest Blumenau será suspensa temporariamente.</p>
+                </div>
+                <div class="card-footer">
+                    <a href=" ###### " class="btn btn-light">ler</a>
+                </div>
+            </div>
+            <!-- FIM de Oktoberfest / Destaques -->
+        </main>
     </div>
     <!-- Término do Container -->
 
