--- a/index.html
+++ b/index.html
@@ -129,9 +129,7 @@
                 </div>               
                 <div class="card-body">
                     <img src="https://bnuonline.com.br/crop/220x150/1.46x1/upload/variedades/1696530626/blumenau_enchente.jpg" class="card-img-top" alt="Seção de Notícias">
-                    <p class="card-text">Enchente em Blumenau: Rio Itajaí-Açu deve atingir 9,5 metros, diz AlertaBlu.</p>
-                </div>
-                <div class="card-footer">
+                    <p class="card-text">Enchente em Blumenau: Rio Itajaí-Açu deve atingir 9,5 metros, diz AlertaBlu.</p>    
                     <a href=" ###### " class="btn btn-light">ler</a>
                 </div>
             </div>
@@ -145,8 +143,6 @@
                     <div class="card-body">
                         <img src="https://bnuonline.com.br/crop/220x150/1.46x1/upload/variedades/1696256999/download_5.png" class="card-img-top" alt="Seção de Eventos">
                         <p class="card-text">4ª Temporada de Exposições do MAB ‒ Ano 2023.</p>
-                    </div>
-                    <div class="card-footer">
                         <a href=" ###### " class="btn btn-light">ler</a>
                     </div>
             </div>
@@ -160,8 +156,6 @@
                 <div class="card-body">
                     <img src="https://bnuonline.com.br/crop/220x150/1.46x1/upload/variedades/1696261619/1f6f06bc6e30df75880e81286e945b53.jpeg" class="card-img-top" alt="Seção de Diversos">
                     <p class="card-text">Praça do Empreendedor implementa atendimento automatizado on-line.</p>
-                </div>
-                <div class="card-footer">
                     <a href=" ###### " class="btn btn-light">ler</a>
                 </div>
             </div>
@@ -175,8 +169,6 @@
                 <div class="card-body">
                     <img src="https://bnuonline.com.br/crop/220x150/1.46x1/upload/variedades/1696548591/27_46_primeira_noite_de_oktoberfest_e_maior_dos_ultimos_10_anos_confira_os_numeros_whatsapp_image_2019_10_10_at_09.jpeg" class="card-img-top" alt="Seção de Oktoberfest">
                     <p class="card-text">URGENTE ‒ Após fortes chuvas, a 38ª Oktoberfest Blumenau será suspensa temporariamente.</p>
-                </div>
-                <div class="card-footer">
                     <a href=" ###### " class="btn btn-light">ler</a>
                 </div>
             </div>
@@ -227,7 +219,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <div class="card-text veja">
+                            <div class="card-text">
                                 <ul>
                                     <li><a href=" ########### ">home</a></li>
                                     <li><a href=" ########### ">empregos</a></li>
