a webpage noticias.html foi criada; § o link foi adicionado na homepage com os atributos target=_blank e rel=noreferrer noopener

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <p class="card-text">Enchente em Blumenau: Rio Itajaí-Açu deve atingir 9,5 metros, diz AlertaBlu.</p>    
                 </div>
                 <div class="card-footer">
-                    <a href=" ###### " class="btn btn-light">ler</a>
+                    <a rel="noreferrer noopener" href="noticias.html " target="_blank" class="btn btn-light">ler</a>
                 </div>
             </div>
             <!-- FIM de Notícias / Destaques -->
