criação do breadcrumbs da webpage noticias.html

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <nav class="navbar navbar-expanded-lg bg-success">
         
         <!-- Logomarca com link para Home -->
-        <a class="navbar-brand col-sm-4" href=" https://bnuonline.com.br/inicio">
+        <a class="navbar-brand col-sm-4" rel="noreferrer noopener" href="index.html" target="_blank">
             <img src="img/logobnuonline.png" class="float-end" alt="logomarca" width="333vw">
         </a>
  
 
         <!-- Menu de links das seções -->
         <div class="nav col maiuscula">
-            <a class="nav-link link-light" href=" https://bnuonline.com.br/inicio ">home</a>
+            <a class="nav-link link-light" rel="noreferrer noopener" href="index.html" target="_blank">home</a>
             <a class="nav-link link-light" href=" https://bnuonline.com.br/vagas ">empregos</a>
             <a class="nav-link link-light" href=" https://bnuonline.com.br/curriculos ">currículos</a>
             <a class="nav-link link-light" href=" https://bnuonline.com.br/classificados ">classificados</a>
@@ -230,7 +230,7 @@
                         <div class="card-body">
                             <div class="card-text">
                                 <ul>
-                                    <li><a href=" ########### ">home</a></li>
+                                    <li><a rel="noreferrer noopener" href="index.html" target="_blank">home</a></li>
                                     <li><a href=" ########### ">empregos</a></li>
                                     <li><a href=" ########### ">currículos	</a></li>
                                     <li><a href=" ########### ">classificados</a></li>
