a webpage noticias foi feita

--- a/noticias.html
+++ b/noticias.html
@@ -54,9 +54,56 @@
             </aside>
 
             <section class="col-8">
-                <div class="card">infotal</div>
-                <div class="card">infotal</div>
-                <div class="card">infotal</div>
+                <div class="row grid">
+                    <div class="card">
+                        <img src="img/logobnuonline.png" class="card-img-top" alt="Notícia">
+                        <div class="card-head"><h3>infotal</h3></div>
+                        <div class="card-body">
+                            <div class="card-text">
+                                <p>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor debitis mollitia necessitatibus sequi ipsum modi ex quod quia unde. Nulla ad est necessitatibus officia modi excepturi! Inventore quisquam veritatis obcaecati.</div>
+                                </p>
+                        </div> 
+                        <div class="card-footer">
+                            <a href="#" class="card-link pag">notícias</a>
+                            <a href="#" class="card-link ler">ler</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row grid">
+                    <div class="card">
+                        <img src="img/logobnuonline.png" class="card-img-top" alt="Notícia">
+                        <div class="card-head"><h3>infotal</h3></div>
+                        <div class="card-body">
+                            <div class="card-text">
+                                <p>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor debitis mollitia necessitatibus sequi ipsum modi ex quod quia unde. Nulla ad est necessitatibus officia modi excepturi! Inventore quisquam veritatis obcaecati.</div>
+                                </p>
+                        </div> 
+                        <div class="card-footer">
+                            <a href="#" class="card-link pag">notícias</a>
+                            <a href="#" class="card-link ler">ler</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row grid">
+                    <div class="card">
+                        <img src="img/logobnuonline.png" class="card-img-top" alt="Notícia">
+                        <div class="card-head"><h3>infotal</h3></div>
+                        <div class="card-body">
+                            <div class="card-text">
+                                <p>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor debitis mollitia necessitatibus sequi ipsum modi ex quod quia unde. Nulla ad est necessitatibus officia modi excepturi! Inventore quisquam veritatis obcaecati.</div>
+                                </p>
+                        </div> 
+                        <div class="card-footer">
+                            <a href="#" class="card-link pag">notícias</a>
+                            <a href="#" class="card-link ler">ler</a>
+                        </div>
+                    </div>
+                </div>
             </section>
 
         </main>
