§ a webpage de noticias está ok; § a webpage do curriculo ainda precisa de ajustes

--- a/noticias.html
+++ b/noticias.html
@@ -56,12 +56,12 @@
             <section class="col-8">
                 <div class="row grid">
                     <div class="card">
-                        <img src="img/logobnuonline.png" class="card-img-top" alt="Notícia">
-                        <div class="card-head"><h3>infotal</h3></div>
+                        <img src="img/blumenau_enchente.jpg" class="card-img-top" alt="Notícia">
+                        <div class="card-head"><h3>Enchente em Blumenau: Rio Itajaí-Açu deve atingir 9,5 metros, diz AlertaBlu</h3></div>
                         <div class="card-body">
                             <div class="card-text">
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor debitis mollitia necessitatibus sequi ipsum modi ex quod quia unde. Nulla ad est necessitatibus officia modi excepturi! Inventore quisquam veritatis obcaecati.</div>
+                                    O nível do Rio Itajaí-Açu deve atingir 9 metros em Blumenau às 22h desta quarta-feira (4), prevê a Defesa Civil municipal. Com projeção de pouco aumento, às 5h de quinta-feira (5) o rio deve chegar aos 9,5 metros. A informação foi divulgada nesta noite. A previsão de chuvas(...)
                                 </p>
                         </div> 
                         <div class="card-footer">
@@ -73,12 +73,13 @@
 
                 <div class="row grid">
                     <div class="card">
-                        <img src="img/logobnuonline.png" class="card-img-top" alt="Notícia">
-                        <div class="card-head"><h3>infotal</h3></div>
+                        <img src="img/roubapai.jpeg" class="card-img-top" alt="Notícia">
+                        <div class="card-head"><h3>Homem ameaça e rouba o próprio pai, destrói carro e acaba detido em Blumenau</h3></div>
                         <div class="card-body">
                             <div class="card-text">
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor debitis mollitia necessitatibus sequi ipsum modi ex quod quia unde. Nulla ad est necessitatibus officia modi excepturi! Inventore quisquam veritatis obcaecati.</div>
+                                    Um homem de 31 anos foi detido após assaltar o própio pai, destruir o carro dele e ainda revelar intenções criminosas na madrugada de sábado (30), em Blumenau, no Vale do Itajaí. Tudo começou quando o suspeito foi visitar seu pai, na rua Helene Ohf, no bairro Água Verde.
+Segundo o relat(...)
                                 </p>
                         </div> 
                         <div class="card-footer">
@@ -90,12 +91,13 @@
 
                 <div class="row grid">
                     <div class="card">
-                        <img src="img/logobnuonline.png" class="card-img-top" alt="Notícia">
-                        <div class="card-head"><h3>infotal</h3></div>
+                        <img src="img/escadariaponte.jpeg" class="card-img-top" alt="Notícia">
+                        <div class="card-head"><h3>Uma jovem de 25 anos foi estuprada e agredida no bairro Ponta Aguda, na escadaria próximo ao Túnel da Ponte de Ferro em Blumenau</h3></div>
                         <div class="card-body">
                             <div class="card-text">
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor debitis mollitia necessitatibus sequi ipsum modi ex quod quia unde. Nulla ad est necessitatibus officia modi excepturi! Inventore quisquam veritatis obcaecati.</div>
+                                    Uma jovem de 25 anos foi estuprada e agredida no bairro Ponta Aguda, na escadaria próximo ao Túnel da Ponte de Ferro em #Blumenau.
+A Polícia Militar atendeu a uma ocorrência de estupro, o fato ocorreu no período matutino do dia 25, na rua Das Missões no bairro Ponta Aguda em Blumenau.No local, a guarn(...)
                                 </p>
                         </div> 
                         <div class="card-footer">
