--- a/curriculo.html
+++ b/curriculo.html
@@ -39,68 +39,72 @@
     </nav>
     <!-- FIM do Bread Crumbs -->
 
-    <form class="container">
-        <div class="row col-8 col-4">
-            <fieldset>
+    <form class="container" id="curriculo">
+        <div class="row">
+            <fieldset class="col-sm-12 col-md-8">
                 <legend>Nome Completo</legend>
-                <input type="text">
+                <input type="text" class="form-control">
             </fieldset>
 
-            <fieldset>
+            <fieldset class="col-sm-12 col-md-4">
                 <legend>Objetivo</legend>
-                <select name="objetivo" >
+                <select name="objetivo" class="form-select objetivo">
                     <option value="">Escolha um Objetivo</option>
                     <option value="analista de sistemas">
-                        analista de sistemas
+                        Analista de Sistemas
                     </option>
-                    <option value="desenvolvedor backend'">desenvolvedor backend</option>
-                    <option value="desenvolvedor fullstack">desenvolvedor fullstack</option>
-                    <option value="desenvolvedor web">desenvolvedor web</option>
-                    <option value="designer grafico">designer gráfico</option>
-                    <option value="Programador">programador</option>
+                    <option value="desenvolvedor backend'">Desenvolvedor Backend</option>
+                    <option value="desenvolvedor fullstack">Desenvolvedor Fullstack</option>
+                    <option value="desenvolvedor web">Desenvolvedor Web</option>
+                    <option value="designer grafico">Designer Gráfico</option>
+                    <option value="Programador">Programador</option>
                 </select>
             </fieldset>
         </div>
 
-        <div class="row col-4 col-8">
-            <fieldset>
+        <div class="row">
+            <fieldset class="col-sm-12 col-md-5">
                 <legend>Cidade</legend>
-                <input type="text">
+                <input type="text" class="form-control">
             </fieldset>
 
-            <fieldset>
+            <fieldset class="col-sm-12 col-md-7">
                 <legend>E-mail</legend>
-                <input type="email">
+                <input type="email" class="form-control">
             </fieldset>
         </div>
 
         <div class="row col">
             <fieldset>
                 <legend>Apresentação / Informação Complementar</legend>
-                <textarea name="apresentacao" cols="30" rows="10"></textarea>
+                <textarea name="apresentacao" class="form-control" rows="11" ></textarea>
             </fieldset>
         </div>
 
         <div class="row col">
             <fieldset>
                 <legend>Qualificações</legend>
-                <textarea name="qualificacoes" cols="30" rows="10"></textarea>
+                <textarea name="qualificacoes" class="form-control" rows="11"></textarea>
             </fieldset>
         </div>
 
         <div class="row col">
             <fieldset>
                 <legend>Formação</legend>
-                <textarea name="formacao" cols="30" rows="10"></textarea>
+                <textarea name="formacao" class="form-control" rows="10"></textarea>
             </fieldset>
         </div>
 
         <div class="row col">
-            <fieldset>Experiência</fieldset>
-            <textarea name="experiencia" cols="30" rows="10"></textarea>
+            <fieldset>
+                <legend>Experiência</legend>
+                <textarea name="experiencia" class="form-control" rows="10"></textarea>
+            </fieldset>
         </div>
 
-        <button type="submit" class="btn btn-secondary">cadastrar</button>
+        <div class="card cadastrar">
+            <button type="submit" class="btn btn-light">cadastrar</button>
+        </div>
     </form>
         
         <!-- Rodapé -->
