foram feitos diversos ajustes nos links do index e das noticias; o curriculo: ajustes na lista de objetivos e no botao cadastrar; § diversos ajustes no style sheet

--- a/curriculo.html
+++ b/curriculo.html
@@ -23,7 +23,7 @@
         <div class="nav col maiuscula">
             <a class="nav-link link-light" rel="noreferrer noopener" href="index.html" target="_blank">home</a>
             <a class="nav-link link-light" href="#">empregos</a>
-            <a class="nav-link link-light" href="#">currículos</a>
+            <a class="nav-link link-light" rel="noreferrer noopener" href="curriculo.html" target="_blank">currículos</a>
             <a class="nav-link link-light" href="#">classificados</a>
             <a class="nav-link link-light" href="#">blog</a>
         </div>
@@ -41,12 +41,12 @@
 
     <form class="container" id="curriculo">
         <div class="row">
-            <fieldset class="col-sm-12 col-md-8">
+            <fieldset class="col-sm-12 col-md-9">
                 <legend>Nome Completo</legend>
                 <input type="text" class="form-control">
             </fieldset>
 
-            <fieldset class="col-sm-12 col-md-4">
+            <fieldset class="col-sm-12 col-md-3">
                 <legend>Objetivo</legend>
                 <select name="objetivo" class="form-select objetivo">
                     <option value="">Escolha um Objetivo</option>
@@ -57,7 +57,7 @@
                     <option value="desenvolvedor fullstack">Desenvolvedor Fullstack</option>
                     <option value="desenvolvedor web">Desenvolvedor Web</option>
                     <option value="designer grafico">Designer Gráfico</option>
-                    <option value="Programador">Programador</option>
+                    <option value="programador">Programador</option>
                 </select>
             </fieldset>
         </div>
@@ -102,8 +102,12 @@
             </fieldset>
         </div>
 
-        <div class="card cadastrar">
-            <button type="submit" class="btn btn-light">cadastrar</button>
+        <div class="card text-center cadastrar">
+            <div class="card-body">
+                <div class="card-text">
+                    <button type="submit" class="btn btn-light">cadastrar</button>
+                </div>
+            </div>
         </div>
     </form>
         
@@ -153,10 +157,10 @@
                         <div class="card-text">
                             <ul>
                                 <li><a rel="noreferrer noopener" href="index.html" target="_blank">home</a></li>
-                                <li><a href=" ########### ">empregos</a></li>
-                                <li><a href=" ########### ">currículos </a></li>
-                                <li><a href=" ########### ">classificados</a></li>
-                                <li><a href=" ########### ">blog</a></li>
+                                <li><a href="#">empregos</a></li>
+                                <li><a rel="noreferrer noopener" href="curriculo.html" target="_blank">currículos </a></li>
+                                <li><a href="#">classificados</a></li>
+                                <li><a href="#">blog</a></li>
                             </ul>
                         </div>
                     </div>
