--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="nav col maiuscula">
             <a class="nav-link link-light" rel="noreferrer noopener" href="index.html" target="_blank">home</a>
             <a class="nav-link link-light" href="#">empregos</a>
-            <a class="nav-link link-light" href="#">currículos</a>
+            <a class="nav-link link-light" rel="noreferrer noopener" href="curriculo.html" target="_blank">currículos</a>
             <a class="nav-link link-light" href="#">classificados</a>
             <a class="nav-link link-light" href="#">blog</a>
         </div>
@@ -80,11 +80,11 @@
                         </button>
 
                         <button type="button" class="btn maiuscula amarelo">
-                            <a href="#">cadastrar currículo</a>
+                            <a rel="noreferrer noopener" href="curriculo.html" target="_blank">cadastrar currículo</a>
                         </button>
 
                         <button type="button" class="btn maiuscula verde">
-                            <a href="#">cadastrar currículo grátis</a>
+                            <a rel="noreferrer noopener" href="curriculo.html" target="_blank">cadastrar currículo grátis</a>
                         </button>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                             <ul>
                                 <li><a rel="noreferrer noopener" href="index.html" target="_blank">home</a></li>
                                 <li><a href="#">empregos</a></li>
-                                <li><a href="#">currículos </a></li>
+                                <li><a rel="noreferrer noopener" href="curriculo.html" target="_blank">currículos </a></li>
                                 <li><a href="#">classificados</a></li>
                                 <li><a href="#">blog</a></li>
                             </ul>
