--- a/noticias.html
+++ b/noticias.html
@@ -24,7 +24,7 @@
             <a class="nav-link link-light" rel="noreferrer noopener" href="index.html" target="_blank">home</a>
             <a class="nav-link link-light" href="#">empregos</a>
             <a class="nav-link link-light" href="#">currículos</a>
-            <a class="nav-link link-light" href="#">classificados</a>
+            <a class="nav-link link-light" rel="noreferrer noopener" href="curriculo.html" target="_blank">classificados</a>
             <a class="nav-link link-light" href="#">blog</a>
         </div>
         <!-- Fim do Navbar -->
@@ -155,10 +155,10 @@ A Polícia Militar atendeu a uma ocorrência de estupro, o fato ocorreu no perí
                         <div class="card-text">
                             <ul>
                                 <li><a rel="noreferrer noopener" href="index.html" target="_blank">home</a></li>
-                                <li><a href=" ########### ">empregos</a></li>
-                                <li><a href=" ########### ">currículos </a></li>
-                                <li><a href=" ########### ">classificados</a></li>
-                                <li><a href=" ########### ">blog</a></li>
+                                <li><a href="#">empregos</a></li>
+                                <li><a rel="noreferrer noopener" href="curriculo.html" target="_blank">currículos </a></li>
+                                <li><a href="#">classificados</a></li>
+                                <li><a href="#">blog</a></li>
                             </ul>
                         </div>
                     </div>
