ajustes nos links; § ajustes no rodape do curriculo

--- a/curriculo.html
+++ b/curriculo.html
@@ -40,6 +40,14 @@
     <!-- FIM do Bread Crumbs -->
 
     <form class="container" id="curriculo">
+        <div class="card">
+            <div class="card-body">
+                <div class="card-text">
+
+                    <h2 class="maiuscula text-center">cadastro de currículo</h2>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <fieldset class="col-sm-12 col-md-9">
                 <legend>Nome Completo</legend>
@@ -112,7 +120,7 @@
     </form>
         
         <!-- Rodapé -->
-        <footer>
+        <footer class="container">
 
             <!-- .ROW -->
             <div class="row">
