--- a/noticias.html
+++ b/noticias.html
@@ -23,8 +23,8 @@
         <div class="nav col maiuscula">
             <a class="nav-link link-light" rel="noreferrer noopener" href="index.html" target="_blank">home</a>
             <a class="nav-link link-light" href="#">empregos</a>
-            <a class="nav-link link-light" href="#">currículos</a>
-            <a class="nav-link link-light" rel="noreferrer noopener" href="curriculo.html" target="_blank">classificados</a>
+            <a class="nav-link link-light" rel="noreferrer noopener" href="curriculo.html" target="_blank">currículos</a>
+            <a class="nav-link link-light" href="#">classificados</a>
             <a class="nav-link link-light" href="#">blog</a>
         </div>
         <!-- Fim do Navbar -->
