ajustes no lista de links do rodape

--- a/curriculo.html
+++ b/curriculo.html
@@ -51,7 +51,7 @@
         <div class="row">
             <fieldset class="col-sm-12 col-md-9">
                 <legend>Nome Completo</legend>
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" required>
             </fieldset>
 
             <fieldset class="col-sm-12 col-md-3">
@@ -163,7 +163,7 @@
                 </div>
                 <div class="card-body">
                     <div class="card-text">
-                        <ul>
+                        <ul class="list-unstyled">
                             <li><a rel="noreferrer noopener" href="index.html" target="_blank">home</a></li>
                             <li><a href="#">empregos</a></li>
                             <li><a rel="noreferrer noopener" href="curriculo.html" target="_blank">currículos </a></li>
