--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     </div>
                     <div class="card-body">
                         <div class="card-text">
-                            <ul>
+                            <ul class="list-unstyled">
                                 <li><a rel="noreferrer noopener" href="index.html" target="_blank">home</a></li>
                                 <li><a href="#">empregos</a></li>
                                 <li><a rel="noreferrer noopener" href="curriculo.html" target="_blank">currículos </a></li>
