--- a/noticias.html
+++ b/noticias.html
@@ -153,7 +153,7 @@ A Polícia Militar atendeu a uma ocorrência de estupro, o fato ocorreu no perí
                     </div>
                     <div class="card-body">
                         <div class="card-text">
-                            <ul>
+                            <ul class="list-unstyled">
                                 <li><a rel="noreferrer noopener" href="index.html" target="_blank">home</a></li>
                                 <li><a href="#">empregos</a></li>
                                 <li><a rel="noreferrer noopener" href="curriculo.html" target="_blank">currículos </a></li>
